<resources>
    <string name="app_name">Food Runner</string>
    <string name="hnt_mobile_number">Mobile Number (10 digits)</string>
    <string name="des_app_logo">logo of app</string>
    <string name="txt_signup">Don\'t have an account? Sign up now</string>
    <string name="hnt_password">Password</string>
    <string name="btn_login">login</string>
    <string name="txt_forgot_password">Forgot Password?</string>
    <string name="txt_input_description">Enter your registered mobile number and email below:</string>
    <string name="hnt_email_address">Email Address</string>
    <string name="btn_next">Next</string>
    <string name="hnt_name">Name</string>
    <string name="hnt_delivery_address">Delivery Address</string>
    <string name="hnt_password_up_to_4characters">Password (Min. 4 characters)</string>
    <string name="btn_register">Register</string>
    <string name="hnt_confirm_password">Comfirm Password</string>
    <string name="des_phone_icon">icon of mobile-phone</string>
    <string name="des_password_icon">icon of password</string>
    <string name="des_mail_icon">icon of mail</string>
    <string name="des_profile_icon">icon of profile</string>
    <string name="des_location_icon">icon of location</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">My Profile</string>
    <string name="favorite">My Favorite</string>
    <string name="order">My Order</string>
    <string name="home">Home</string>
    <string name="faq">FAQs</string>
    <string name="log_out">Log out</string>
    <string name="que1">Que: What this App does?</string>
    <string name="ans1">Ans: This app shows you a list of top restaurants in the home section.</string>
    <string name="que2">Que: Can we add restaurants in favorites as per our choise?</string>
    <string name="ans2">Ans: Yes we can do so by clicking on the heart icon to add a restaurant in favorites and we can also remove one by doing the same.</string>
    <string name="que3">Que: Where can we find our favorite restaurants?</string>
    <string name="ans3">Ans: We can find our favorite restaurants in the favorite section by selecting it from the navigavtion menu.</string>
    <string name="que4">Que: Where we can find our credentials?</string>
    <string name="ans4">Ans: We can find our credentials in the profile section by selecting it from navigation menu.</string>
    <string name="que5">Que: Where does the favorite data of restaurants store?</string>
    <string name="ans5">Ans: The data of favorite restaurants stores in a local database on user\'s device and it fetches using SQL.</string>
</resources>